creacion del header

--- a/punto7-8/index.html
+++ b/punto7-8/index.html
@@ -9,9 +9,9 @@
     <header>
         <nav>
             <ul>
-                <li>Inicio</li>
-                <li>¿Quienes Somos?</li>
-                <li>Contacto</li>
+                <li><a href="">Inicio</a></li>
+                <li><a href="">¿Quienes Somos?</a></li>
+                <li><a href="">Contacto</a></li>
             </ul>
         </nav>
     </header>
