--- a/punto1-2-3/index.html
+++ b/punto1-2-3/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Taller 9</title>
+    <title>Page Design</title>
 </head>
 <body>
 
@@ -55,17 +55,17 @@
                 <p>Somos una universidad en constante actualización y nos gusta el cambio, te enseñamos tecnologías contemporáneas</p>
             </div>
 
-            <div class="card-1">
+            <div class="section-1__card">
                 <img src="./public/images/section1-education.png" alt="education" width="120px" height="120px">
                 <h3>Virtualidad y educación</h3>
             </div>
 
-            <div class="card-2">
+            <div class="section-1__card">
                 <h3>Alcance de objetivos</h3>
                 <img src="./public/images/section1-goals.png" alt="goals" width="120px" height="120px">
             </div>
 
-            <div class="card-3">
+            <div class="section-1__card">
                 <img src="./public/images/section1-teach.png" alt="teach" width="120px" height="120px">
                 <h3>Clases inclusivas</h3>
             </div>
@@ -74,11 +74,31 @@
 
         <section id="section-2">
 
+            <div class="section-2__info-1">
+                <img src="./public/images/section2-tools.png" alt="tools" width="500px" height="350px">
+                <div class="section-2__info">
+                    <h2>Brindamos herramientas para que tu aprendizaje</h2>
+                    <h2>sea efectivo</h2>
+                    <p>Las herramientas digitales son nuestras aliadas y aprovechamos cada una de estas para brindarte la mejor experiencia en línea</p>
+                    <button>Saber más</button>
+                </div>
+            </div>
+
+            <div class="section-2__info">
+                <div class="info-2">
+                    <h2>Educación pensando en</h2>
+                    <h2>objetivos alcanzados</h2>
+                    <p>Es importantes para nosotros que las metas de cada uno de nuestros estudiantes sea alcanzada a través de nuestros cursos</p>
+                    <button>Saber más</button>
+                </div>
+                <img src="./public/images/section2-goals.png" alt="goals" width="500px" height="350px">
+            </div>
+
         </section>
     </main>
 
     <footer>
-
+        
     </footer>
 </body>
 </html>
