Creacion del punto 4

--- a/punto5/index.html
+++ b/punto5/index.html
@@ -10,10 +10,10 @@
 
 <body>
     <div>
-        <p>En el momento en que <u class="Subrayado-green">entiendo verdaderamente </u>
-            a mi <span class="span red">enemigo</span>, en el momento en que le
-            <u class="Subrayado"> entiendo</u> lo suficientemente bien como para <b class="negrilla">derrotarle</b>,
-            entonces, en ese preciso instante, <span class="span-blue">también le </span><u class="Subrayado red">
+        <p>En el momento en que <u class="subrayado-green">entiendo verdaderamente </u>
+            a mi <span class="span-red">enemigo</span>, en el momento en que le
+            <u class="subrayado"> entiendo</u> lo suficientemente bien como para <b class="negrilla">derrotarle</b>,
+            entonces, en ese preciso instante, <span class="span-blue">también le </span><u class="subrayado-red">
                 quiero </u>
         </p>
     </div>
