--- a/punto4/index.html
+++ b/punto4/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
-    <h1 class="blue">Soy Azul</h1>
-    <h1 class="red">Soy Rojo</h1>
+    <h1 class="blue center">Soy Azul</h1>
+    <h1 class="red center">Soy Rojo</h1>
 </body>
 </html>
