creacion del punto 5

--- a/punto5/index.html
+++ b/punto5/index.html
@@ -10,10 +10,10 @@
 
 <body>
     <div>
-        <p>En el momento en que <u class="subrayado-green">entiendo verdaderamente </u>
-            a mi <span class="span-red">enemigo</span>, en el momento en que le
+        <p>En el momento en que <u class="green">entiendo verdaderamente </u>
+            a mi <span class="bold red">enemigo</span>, en el momento en que le
             <u class="subrayado"> entiendo</u> lo suficientemente bien como para <b class="negrilla">derrotarle</b>,
-            entonces, en ese preciso instante, <span class="span-blue">también le </span><u class="subrayado-red">
+            entonces, en ese preciso instante, <span class="bold blue text">también le </span><u class="bold red text">
                 quiero </u>
         </p>
     </div>
