creacion del punto 6

--- a/punto6/index.html
+++ b/punto6/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
+    <h1>Enlaces. link and hover</h1>
     <div>
         <a href="https://www.marca.com/" class="enlace1">Ir a Marca</a>
     </div>
