--- a/punto9/index.html
+++ b/punto9/index.html
@@ -24,7 +24,7 @@
                 <td>76</td>
             </tr>
             <tr>
-                <td colspan="2">En el momento en que entiendo verdaderamente a mi enemigo, en el momento en que le entiendo lo suficientemente bien como para derrotarle, entonces, en ese preciso instante, también le quiero.</td>
+                <td colspan="2" class="td">En el momento en que entiendo verdaderamente a mi enemigo, en el momento en que le entiendo lo suficientemente bien como para derrotarle, entonces, en ese preciso instante, también le quiero.</td>
             </tr>
         </tbody>
     </table>
