--- a/punto7-8/index.html
+++ b/punto7-8/index.html
@@ -4,14 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Punto 7 y 8</title>
+    <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
     <header>
         <nav>
             <ul>
-                <li><a href="">Inicio</a></li>
-                <li><a href="">¿Quienes Somos?</a></li>
-                <li><a href="">Contacto</a></li>
+                <li><a href="#">Inicio</a></li>
+                <li><a href="#">¿Quienes Somos?</a></li>
+                <li><a href="#">Contacto</a></li>
             </ul>
         </nav>
     </header>
