--- a/punto1-2-3/index.html
+++ b/punto1-2-3/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://indestructibletype.com/fonts/Jost.css" type="text/css" charset="utf-8" />
     <link rel="stylesheet" href="./styles/common-styles.css">
     <link rel="stylesheet" href="./styles/header-styles.css">
+    <link rel="stylesheet" href="./styles/banner-styles.css">
 </head>
 <body>
 
@@ -44,12 +45,13 @@
                     <p>Toma los cursos más importantes de tecnología con clases en línea, donde podrás tener acceso a contenido actualizado desde la comodidad de tu casa y a tu ritmo</p>
                 </div>
                 <div class="banner__buttons">
-                    <button>Saber más</button>
-                    <button>Planes</button>
+                    <button class="button--orange">Saber más</button>
+                    <button class="button-transparent">Planes</button>
                 </div>
             </div>
 
             <img src="./public/images/banner-online.png" alt="banner online">
+            
         </section>
 
         <section id="section-1">
@@ -84,7 +86,7 @@
                     <h2>Brindamos herramientas para que tu aprendizaje</h2>
                     <h2>sea efectivo</h2>
                     <p>Las herramientas digitales son nuestras aliadas y aprovechamos cada una de estas para brindarte la mejor experiencia en línea</p>
-                    <button>Saber más</button>
+                    <button class="button--orange">Saber más</button>
                 </div>
             </div>
 
@@ -93,7 +95,7 @@
                     <h2>Educación pensando en</h2>
                     <h2>objetivos alcanzados</h2>
                     <p>Es importantes para nosotros que las metas de cada uno de nuestros estudiantes sea alcanzada a través de nuestros cursos</p>
-                    <button>Saber más</button>
+                    <button class="button--orange">Saber más</button>
                 </div>
                 <img src="./public/images/section2-goals.png" alt="goals" width="500px" height="350px">
             </div>
