--- a/punto1-2-3/index.html
+++ b/punto1-2-3/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="./styles/common-styles.css">
     <link rel="stylesheet" href="./styles/header-styles.css">
     <link rel="stylesheet" href="./styles/banner-styles.css">
+    <link rel="stylesheet" href="./styles/section-1-styles.css">
 </head>
 <body>
 
@@ -66,7 +67,7 @@
                 <h3>Virtualidad y educación</h3>
             </div>
 
-            <div class="section-1__card">
+            <div class="section-1__card section-1__card-down">
                 <h3>Alcance de objetivos</h3>
                 <img src="./public/images/section1-goals.png" alt="goals" width="120px" height="120px">
             </div>
