--- a/punto1-2-3/index.html
+++ b/punto1-2-3/index.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="./styles/header-styles.css">
     <link rel="stylesheet" href="./styles/banner-styles.css">
     <link rel="stylesheet" href="./styles/section-1-styles.css">
+    <link rel="stylesheet" href="./styles/section-2-styles.css">
+    <link rel="stylesheet" href="./styles/footer-styles.css">
 </head>
 <body>
 
@@ -81,24 +83,24 @@
 
         <section id="section-2">
 
-            <div class="section-2__info-1">
-                <img src="./public/images/section2-tools.png" alt="tools" width="500px" height="350px">
-                <div class="section-2__info">
+            <div class="section-2__info">
+                <img src="./public/images/section2-tools.png" alt="tools" width="400px" height="350px">
+                <div>
                     <h2>Brindamos herramientas para que tu aprendizaje</h2>
-                    <h2>sea efectivo</h2>
+                    <h2 class="title_pink">sea efectivo</h2>
                     <p>Las herramientas digitales son nuestras aliadas y aprovechamos cada una de estas para brindarte la mejor experiencia en línea</p>
                     <button class="button--orange">Saber más</button>
                 </div>
             </div>
 
             <div class="section-2__info">
-                <div class="info-2">
+                <div>
                     <h2>Educación pensando en</h2>
-                    <h2>objetivos alcanzados</h2>
+                    <h2 class="title_pink">objetivos alcanzados</h2>
                     <p>Es importantes para nosotros que las metas de cada uno de nuestros estudiantes sea alcanzada a través de nuestros cursos</p>
                     <button class="button--orange">Saber más</button>
                 </div>
-                <img src="./public/images/section2-goals.png" alt="goals" width="500px" height="350px">
+                <img src="./public/images/section2-goals.png" alt="goals" width="400px" height="300px">
             </div>
 
         </section>
