--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>taller 9 menu</title>
+  <title>Taller 9</title>
   <link rel="stylesheet" href="./styles/styles.css">
 </head>
-<body> 
+<body>
   <div>
     <h1> Taller unidad 9</h1>
     <h2>Paula Andrea Pulido Ibarra</h2>
@@ -62,6 +62,6 @@
         </li>
       </ul>
     </nav>
-  </div> 
+  </div>
 </body>
 </html>
